fix page overspill AGAIN

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,6 @@ h3 {
   background-position: center center;
   background-size: cover;
   width: 100%;
-position: relative;
 -webkit-box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
         box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25);
 
@@ -128,7 +127,6 @@ position: relative;
   background-position: center center;
   background-size: cover;
   width: 100%;
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -163,7 +161,6 @@ position: relative;
 }
 
 #header-text {
-  position: relative;
   padding-top: 50px;
   padding-left: 1rem;
   padding-right: 1rem;
